# bsn-jax

./: LICENSE.txt  README.md  main.py  setup.cfg  test_gradients.py
src/: data.py  evaluate.py  genz_gaussian.py  main.py  model.py  options.py  run_experiment.py  run_model.py  run_single_experiment.py  train_model_loop.py  util.py
src/bsn_jax/: evaluate.py  options.py  run_experiment.py  run_model.py  run_single_experiment.py  train_model_loop.py  util.py
src/bsn_jax/data/: data.py  genz_gaussian.py
src/bsn_jax/model/: loss.py
src/model/: loss.py  model.py  param_util.py
src/test/: test_flatten_reshape.py  test_gradients.py
test/: test_flatten_reshape.py  test_gradients.py
