[metadata]
name = bsn_jax
author = Katharina Ott
platforms = linux
keywords = ML

[options]
packages=find:
install_requires =
  matplotlib~=3.7
  seaborn~=0.12
  numpy~=1.25
  scipy~=1.11
  jax~=0.4
  jaxlib~=0.4
python_requires = >=3.10
package_dir =
    =src
setup_requires =
    setuptools

[options.packages.find]
where=src

[options.extras_require]
dev =
  black
  pytest
  isort

[isort]
profile = black